// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`differences builder utils getFieldDifferencesRow - multiple difference 1`] = `
Object {
  "cells": Array [
    Object {
      "content": Array [
        MediaWikiText {
          "children": undefined,
          "styling": undefined,
          "value": "test",
        },
      ],
    },
    Object {
      "content": Array [
        MediaWikiText {
          "children": undefined,
          "styling": undefined,
          "value": "test <span style=\\"color: #ee4231\\">removed</span> <span style=\\"color: #ee4231\\">first</span>",
        },
      ],
    },
    Object {
      "content": Array [
        MediaWikiText {
          "children": undefined,
          "styling": undefined,
          "value": "test <span style=\\"color: #6bc71f\\">added</span> <span style=\\"color: #6bc71f\\">second</span>",
        },
      ],
    },
  ],
  "minimal": true,
}
`;

exports[`differences builder utils getFieldDifferencesRow - one difference 1`] = `
Object {
  "cells": Array [
    Object {
      "content": Array [
        MediaWikiText {
          "children": undefined,
          "styling": undefined,
          "value": "test",
        },
      ],
    },
    Object {
      "content": Array [
        MediaWikiText {
          "children": undefined,
          "styling": undefined,
          "value": "test <span style=\\"color: #ee4231\\">removed</span>",
        },
      ],
    },
    Object {
      "content": Array [
        MediaWikiText {
          "children": undefined,
          "styling": undefined,
          "value": "test <span style=\\"color: #6bc71f\\">added</span>",
        },
      ],
    },
  ],
  "minimal": true,
}
`;
